--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "prettier": "npx prettier --write ."
+    "prettier": "npx prettier --write .",
+    "test": "jest"
   },
   "dependencies": {
     "@emotion/react": "^11.9.0",
@@ -17,10 +18,13 @@
     "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
+    "@types/jest": "^27.4.1",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
+    "jest": "^27.5.1",
     "prettier": "2.6.2",
+    "ts-jest": "^27.1.4",
     "typescript": "^4.6.3",
     "vite": "^2.9.2"
   }
